tests/ui/macros/metavar-expressions/syntax-errors.stderr
error: unexpected token: $
  --> $DIR/syntax-errors.rs:9:8
   |
LL |     ( $$ $a:ident ) => {
   |        ^

note: `$$` and meta-variable expressions are not allowed inside macro parameter definitions
  --> $DIR/syntax-errors.rs:9:8
   |
LL |     ( $$ $a:ident ) => {
   |        ^

error: unexpected token: {
  --> $DIR/syntax-errors.rs:15:8
   |
LL |     ( ${ len() } ) => {
   |        ^^^^^^^^^

note: `$$` and meta-variable expressions are not allowed inside macro parameter definitions
  --> $DIR/syntax-errors.rs:15:8
   |
LL |     ( ${ len() } ) => {
   |        ^^^^^^^^^

error: expected one of: `*`, `+`, or `?`
  --> $DIR/syntax-errors.rs:15:8
   |
LL |     ( ${ len() } ) => {
   |        ^^^^^^^^^

error: meta-variables within meta-variable expressions must be referenced using a dollar sign
  --> $DIR/syntax-errors.rs:22:33
   |
LL |     ( $( $i:ident ),* ) => { ${ ignore() } };
   |                                 ^^^^^^

error: only unsuffixes integer literals are supported in meta-variable expressions
  --> $DIR/syntax-errors.rs:27:33
   |
LL |     ( $( $i:ident ),* ) => { ${ index(1u32) } };
   |                                 ^^^^^

error: meta-variable expression parameter must be wrapped in parentheses
  --> $DIR/syntax-errors.rs:32:33
   |
LL |     ( $( $i:ident ),* ) => { ${ count{i} } };
   |                                 ^^^^^

error: unexpected token: a
  --> $DIR/syntax-errors.rs:44:19
   |
LL |         ${count() a b c}
   |                   ^
   |
note: meta-variable expression must not have trailing tokens
  --> $DIR/syntax-errors.rs:44:19
   |
LL |         ${count() a b c}
   |                   ^

error: unexpected token: a
  --> $DIR/syntax-errors.rs:46:20
   |
LL |         ${count($i a b c)}
   |                    ^
   |
note: meta-variable expression must not have trailing tokens
  --> $DIR/syntax-errors.rs:46:20
   |
LL |         ${count($i a b c)}
   |                    ^

error: unexpected token: a
  --> $DIR/syntax-errors.rs:48:23
   |
LL |         ${count($i, 1 a b c)}
   |                       ^
   |
note: meta-variable expression must not have trailing tokens
  --> $DIR/syntax-errors.rs:48:23
   |
LL |         ${count($i, 1 a b c)}
   |                       ^

error: unexpected token: a
  --> $DIR/syntax-errors.rs:50:21
   |
LL |         ${count($i) a b c}
   |                     ^
   |
note: meta-variable expression must not have trailing tokens
  --> $DIR/syntax-errors.rs:50:21
   |
LL |         ${count($i) a b c}
   |                     ^

error: unexpected token: a
  --> $DIR/syntax-errors.rs:53:22
   |
LL |         ${ignore($i) a b c}
   |                      ^
   |
note: meta-variable expression must not have trailing tokens
  --> $DIR/syntax-errors.rs:53:22
   |
LL |         ${ignore($i) a b c}
   |                      ^

error: unexpected token: a
  --> $DIR/syntax-errors.rs:55:21
   |
LL |         ${ignore($i a b c)}
   |                     ^
   |
note: meta-variable expression must not have trailing tokens
  --> $DIR/syntax-errors.rs:55:21
   |
LL |         ${ignore($i a b c)}
   |                     ^

error: unexpected token: a
  --> $DIR/syntax-errors.rs:58:19
   |
LL |         ${index() a b c}
   |                   ^
   |
note: meta-variable expression must not have trailing tokens
  --> $DIR/syntax-errors.rs:58:19
   |
LL |         ${index() a b c}
   |                   ^

error: unexpected token: a
  --> $DIR/syntax-errors.rs:60:19
   |
LL |         ${index(1 a b c)}
   |                   ^
   |
note: meta-variable expression must not have trailing tokens
  --> $DIR/syntax-errors.rs:60:19
   |
LL |         ${index(1 a b c)}
   |                   ^

error: unexpected token: a
  --> $DIR/syntax-errors.rs:63:19
   |
LL |         ${index() a b c}
   |                   ^
   |
note: meta-variable expression must not have trailing tokens
  --> $DIR/syntax-errors.rs:63:19
   |
LL |         ${index() a b c}
   |                   ^

error: unexpected token: a
  --> $DIR/syntax-errors.rs:65:19
   |
LL |         ${index(1 a b c)}
   |                   ^
   |
note: meta-variable expression must not have trailing tokens
  --> $DIR/syntax-errors.rs:65:19
   |
LL |         ${index(1 a b c)}
   |                   ^

error: meta-variable expression depth must be a literal
  --> $DIR/syntax-errors.rs:72:33
   |
LL |     ( $( $i:ident ),* ) => { ${ index(IDX) } };
   |                                 ^^^^^

error: meta-variables within meta-variable expressions must be referenced using a dollar sign
  --> $DIR/syntax-errors.rs:78:11
   |
LL |         ${count(foo)}
   |           ^^^^^

error: meta-variables within meta-variable expressions must be referenced using a dollar sign
  --> $DIR/syntax-errors.rs:85:11
   |
LL |         ${ignore(bar)}
   |           ^^^^^^

error: unrecognized meta-variable expression
  --> $DIR/syntax-errors.rs:91:33
   |
LL |     ( $( $i:ident ),* ) => { ${ aaaaaaaaaaaaaa(i) } };
   |                                 ^^^^^^^^^^^^^^ help: supported expressions are count, ignore, index and len

error: expected identifier or string literal
  --> $DIR/syntax-errors.rs:38:33
   |
LL |     ( $( $i:ident ),* ) => { ${ {} } };
   |                                 ^^

error: aborting due to 21 previous errors

